<resources>
    <string name="app_name">Juked</string>
    <string name="title_activity_settings_menu">Settings</string>
    <string name="Join">Join a Party</string>
    <string name="Create">Start a Party</string>

    <string name="joinToast">Join!</string>
    <string name="createToast">Create!</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_create_lobby">CreateLobby</string>

    <string name="create_lobby">Create Lobby</string>
    <string name="join_lobby">Join Party</string>
    <string name="lobby_code">Lobby Code</string>
    <string name="joinLobbyBtn">Join Party</string>
    <string name="createLobbyBtn">Create Party</string>
    <string name="nickname">Nickname</string>
    <string name="generatedLobbyCode">XXXX</string>
    <string name="backtohome"><![CDATA[< Back]]></string>

    <string name="title_activity_host_main">HostMainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="avatar">avatar</string>

    <string name="displayLobbyCode">displayLobbyCode</string>
    <string name="displayLobbyCodeText">Party Code: </string>
    <string name="nightMode">nmode</string>
    <string name="spotifyLogout">splogout</string>
    <string name="spotifLogout">spLogout</string>
    <string name="jukedLogout">jkLogout</string>
    <string name="nightMde">nMode</string>
    <string name="spLogout">Spotify Logout</string>
    <string name="jkLogout">Juked Logout</string>
    <string name="dayMode">Day Mode</string>
    <string name="nMode">Night Mode</string>


</resources>
