<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@color/JukedGray"
    android:padding="5dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputNickname"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:maxLength="4"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="173dp"
        android:layout_marginEnd="3dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="3dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLobbyCode"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/lobby_code"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/joinLobbyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:layout_marginEnd="71dp"
        android:layout_marginLeft="86dp"
        android:layout_marginRight="71dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="44dp"
        android:text="@string/joinLobbyBtn"
        android:background="@color/JukedBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/backToHomeJoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:layout_marginEnd="196dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="196dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:text="@string/backtohome"
        android:textColor="@color/JukedBlue"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputNickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>